stylesheet.css
/* notifications */
.QSTWEAKS-notifications .message-content {
    /* notification text sizing */
    font-size: 0.9em;
    text-overflow: ellipsis;
    width: 110px;
}
.QSTWEAKS-notifications .message-list-section-list,
.QSTWEAKS-notifications .message-list-sections {
    /* scrolling list margin/padding/spacing */
    margin: 0px;
    spacing: 0px;
    padding: 0px;
}
.QSTWEAKS-notifications .message {
    /* message margin / round */
    margin: 6px 0px 2px 0px;
    border-radius: 18px;
}
.QSTWEAKS-notifications {
    /* notification box sizing */
    padding: 16px 4px 16px 16px;
    margin: 0px 12px;
    max-height: 292px;
}
.QSTWEAKS-notifications.QSTWEAKS-notifications-integrated {
    /* integrated sizing */
    padding: 0px !important;
    margin: 4px 0px 0px 0px !important;
}
.QSTWEAKS-notifications-no-notifications-placeholder {
    font-weight: bold;
    margin: 18px;
    spacing: 6px;
}
.QSTWEAKS-notifications.QSTWEAKS-notifications-integrated .QSTWEAKS-notifications-no-notifications {
    margin: 16px !important;
}
.QSTWEAKS-notifications-no-notifications-box {
    width: 100%;
    margin-top: 6px;
    margin-bottom: 6px;
}
.QSTWEAKS-notifications .message-list-sections {
    margin-right: 12px;
}
.QSTWEAKS-notifications.QSTWEAKS-notifications-integrated .message-list-sections {
    margin-right: 0px;
}
.QSTWEAKS-notifications .QSTWEAKS-notifications-title {
    /* notifications title */
    font-weight: bold;
    margin-left: 4px;
    padding: 6px 0px;
}
.QSTWEAKS-quick-settings {
    margin: 12px 12px;
}
.QSTWEAKS-panel-menu .quick-toggle-menu-container {
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 20px;
    margin-bottom: 0px;
    padding-bottom: 0px;
}
.QSTWEAKS-quick-settings-shutdown-item {
    margin-top: 20px;
}
.QSTWEAKS-panel-menu .quick-toggle-menu {
    margin: 0;
}
/* clear-notifications-button */
.QSTWEAKS-notifications-clear-button {
    font-weight: bold;
    padding: 6px 12px;
    border-radius: 8px;
    spacing: 4px;
}
.QSTWEAKS-notifications-clear-button:hover {
    background-color: rgba(127, 127, 127, .2);
}
/* media control on quick settings */
.quick-settings .QSTWEAKS-media .message {
    /* margin / round */
    margin: 2px 0px 0px 0px;
    border-radius: 22px;
    padding: 0px;
    width: 100px;
}
.quick-settings .QSTWEAKS-media .message-content {
    /* text sizing */
    font-size: 0.89em;
    text-overflow: ellipsis;
    width: 60px;
}
.quick-settings .QSTWEAKS-media .message-media-control {
    /* control button sizing */
    padding-left: 5px;
    padding-right: 5px;
}

/* media control compact */
.QSTWEAKS-media-compact-mode .message-icon-bin {
    padding: 0px;
}
.QSTWEAKS-media-compact-mode .message {
    margin: 0px;
}
.QSTWEAKS-media-compact-mode .media-message-cover-icon {
    background-color: transparent;
    padding: 0px;
    margin: 16px 0px 0px 12px;
    /* border-radius: 99px; */
}

/* weather box overflow fix */
.QSTWEAKS-fixed-weather .weather-button {
    margin-bottom: 6px !important;
}
.QSTWEAKS-fixed-weather .weather-button .weather-box {
    spacing: 7px;
}
.QSTWEAKS-fixed-weather .weather-button .weather-header-box {
    spacing: 4px;
}
.QSTWEAKS-fixed-weather .weather-button .weather-header.location {
    font-weight: normal !important;
    font-size: 9pt !important;
}
.QSTWEAKS-fixed-weather .weather-button .weather-grid {
    spacing-rows: 4px !important;
    spacing-columns: 8px !important;
}
.QSTWEAKS-fixed-weather .weather-button .weather-forecast-icon {
    icon-size: 32px !important;
}
.QSTWEAKS-fixed-weather .weather-button .weather-forecast-time {
    font-size: 8pt !important;
    font-weight: normal !important;
    padding-top: 0.2em !important;
    padding-bottom: 0.4em !important;
}

